--- a/core_java/grep/pom.xml
+++ b/core_java/grep/pom.xml
@@ -1,5 +1,5 @@
 <project>
-  <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion> 
   <groupId>ca.jrvs.apps</groupId>
   <artifactId>grep</artifactId>
   <version>1.0-SNAPSHOT</version>
@@ -16,6 +16,12 @@
       <version>RELEASE</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.13-rc-2</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <properties>
