--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
+.idea/
+jdbc/SQL-Scripts/
+twitter/twitter.iml
+twitter/target/
+jdbc/target/
+grep/target/
+jdbc/.idea/
+jdbc/target
+twitter/.idea/
+jdbc/jdbc.iml
+grep/grep.iml
+twitter/src/main/java/ca/jrvs/apps/example/
 practice/
 springboot/.idea
+springboot/target/
+springboot/trading-app.iml
