Added new domain models, services and controllers; Currently testing TraderDao

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,8 @@
 .idea/
 core_java/jdbc/SQL-Scripts/
-twitter/twitter.iml
-twitter/target/
-jdbc/target/
-grep/target/
-jdbc/.idea/
-jdbc/target
-twitter/.idea/
-jdbc/jdbc.iml
-grep/grep.iml
+*.iml
+target/
+*.iml
 twitter/src/main/java/ca/jrvs/apps/example/
 practice/
-springboot/.idea
-springboot/target/
-springboot/trading-app.iml
 springboot/psql/testDB.sh
